<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#CEFF74"
    tools:context="com.example.alergant.MainActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/alergant" />

    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:hint="@string/user" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/user"
        android:layout_alignRight="@+id/user"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/user"
        android:hint="@string/pass"
        android:background="#FFFFFF"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_alignLeft="@+id/user"
        android:layout_alignRight="@+id/user"
        android:layout_below="@+id/pass"
        android:background="#88BA17"
        android:text="@string/init_button" />
    
     <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_alignLeft="@+id/user"
        android:layout_alignRight="@+id/user"
        android:layout_below="@+id/login"
        android:background="#88BA17"
        android:text="@string/skip" />
    
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user"
        android:layout_alignRight="@+id/user"
        android:layout_below="@+id/skip"
        android:background="#88BA17"
        android:text="@string/create_account" />

</RelativeLayout>